--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Airpods</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
             <li class="menu-item">
               <a href="#" class="menu-link">Contacts</a>
             </li>
-            <li class="menu-item">
+            <li class="menu-item menu-item-btn">
               <button href="#" class="menu-btn">BUY</button>
             </li>
           </ul>
@@ -42,9 +42,9 @@
         <div class="header__content-images">
           <!-- <img src="images/airpods-black.png" alt=""> -->
           <img src="images/airpods-blue.png" alt="">
-          <!-- <img src="images/airpods-green.png" alt=""> -->
-          <!-- <img src="images/airpods-red.png" alt=""> -->
-          <!-- <img src="images/airpods-white.png" alt=""> -->
+          <!-- <img src="images/airpods-green.png" alt="">
+          <img src="images/airpods-red.png" alt="">
+          <img src="images/airpods-white.png" alt=""> -->
         </div>
       </div>
     </div>
