--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           <span class="title--air">Air</span><span class="title--pod">Pod</span><span class="title--s">S</span><span class="title--m">M</span><span class="title--ax">AX</span>
         </h1>
         <div class="header__content-images">
-          <!-- <img src="images/airpods-black.png" alt=""> -->
-          <img src="images/airpods-blue.png" alt="">
-          <!-- <img src="images/airpods-green.png" alt="">
-          <img src="images/airpods-red.png" alt="">
-          <img src="images/airpods-white.png" alt=""> -->
+          <img class="content-item color-black" src="images/airpods-black.png" alt="">
+          <img class="content-item color-blue content-item-active" src="images/airpods-blue.png" alt="">
+          <img class="content-item color-green" src="images/airpods-green.png" alt="">
+          <img class="content-item color-red" src="images/airpods-red.png" alt="">
+          <img class="content-item color-white" src="images/airpods-white.png" alt="">
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
   <main class="main">
     <section class="choose-color">
       <div class="container">
-        <h3 class="choose-color-title">
+        <h3 class="choose-color-title main-title">
           Choose your colour
         </h3>
         <p class="choose-color-text">
@@ -60,19 +60,19 @@
           The ultimate personal audio experience.
         </p>
         <div class="choose-color-list">
-          <button class="choose-color-btn">
+          <button class="choose-color-btn" data-button="color-green">
             <img src="images/btn-green.png" alt="">
           </button>
-          <button class="choose-color-btn">
+          <button class="choose-color-btn" data-button="color-black">
             <img src="images/btn-black.png" alt="">
           </button>
-          <!-- <button class="choose-color-btn">
+          <button class="choose-color-btn choose-color-btn-active" data-button="color-blue">
             <img src="images/btn-blue.png" alt="">
-          </button> -->
-          <button class="choose-color-btn">
+          </button>
+          <button class="choose-color-btn" data-button="color-red">
             <img src="images/btn-red.png" alt="">
           </button>
-          <button class="choose-color-btn">
+          <button class="choose-color-btn" data-button="color-white">
             <img src="images/btn-white.png" alt="">
           </button>
         </div>
@@ -98,11 +98,11 @@
               The telescoping arms expand and stay in any position you want, allowing you to maintain fit and isolation.
             </p>
           </div>
-          <img src="images/side-blue.jpg" alt="" class="">
-          <!-- <img src="images/side-green.jpg" alt="" class="">
-          <img src="images/side-red.jpg" alt="" class="">
-          <img src="images/side-black.jpg" alt="" class="">
-          <img src="images/side-white.jpg" alt="" class=""> -->
+          <img class="content-item color-blue content-item-active" src="images/side-blue.jpg" alt="">
+          <img class="content-item color-green" src="images/side-green.jpg" alt="">
+          <img class="content-item color-red" src="images/side-red.jpg" alt="">
+          <img class="content-item color-black" src="images/side-black.jpg" alt="">
+          <img class="content-item color-white" src="images/side-white.jpg" alt="">
         </div>
       </div>
     </section>
@@ -114,11 +114,11 @@
         <p class="case-text">
           When stored in the sleek and lightweight Smart Case , AirPods Max enter a low-power state to save energy.
         </p>
-        <img src="images/case-blue.jpg" alt="">
-        <!-- <img src="images/case-black.jpg" alt="">
-        <img src="images/case-red.jpg" alt="">
-        <img src="images/case-green.jpg" alt="">
-        <img src="images/case-white.jpg" alt=""> -->
+        <img class="content-item color-blue content-item-active" src="images/case-blue.jpg" alt="">
+        <img class="content-item color-black" src="images/case-black.jpg" alt="">
+        <img class="content-item color-red" src="images/case-red.jpg" alt="">
+        <img class="content-item color-green" src="images/case-green.jpg" alt="">
+        <img class="content-item color-white" src="images/case-white.jpg" alt="">
         <h2 class="energy-title main-title">Stayin' alive, stayin' alive.</h2>
         <p class="energy-num">20</p>
         <p class="energy-text">
