--- a/index.html
+++ b/index.html
@@ -168,5 +168,11 @@
     </div>
   </footer>
   <script src="js/main.js"></script>
+  <script src="js/jquery-3.7.1.js"></script>
+  <script>
+    $(document).ready(function(){
+     // my code
+    });
+    </script>
 </body>
 </html>
